--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dev": "turbo dev --filter=@cube/*"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.5.0",
+    "@commitlint/config-conventional": "19.5.0",
     "@eslint/js": "9.11.1",
     "eslint": "9.11.1",
     "globals": "15.9.0",
