--- a/playground/package.json
+++ b/playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cube-monorepo-playground",
+  "name": "playground",
   "private": true,
   "version": "0.0.0",
   "description": "Playground for Cube framework",
