--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "turbo build --filter=!playground",
     "dev": "turbo dev --filter=!playground",
     "test": "turbo test --filter=!playground",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
