--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,14 @@
       "mode": "auto"
     }
   ],
+  "editor.tabSize": 2,
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "search.exclude": {
-      "**/node_modules": true,
-      "**/bower_components": true,
+    "**/node_modules": true,
+    "**/bower_components": true,
   },
   "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit",
-      "source.fixAll.stylelint": "explicit"
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll.stylelint": "explicit"
   }
 }
