--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,13 @@
       "dev": "unbuild --watch",
       "prepack": "pnpm build"
     },
+    "dependencies": {
+      "@cube/di": "workspace:*",
+      "h3": "1.12.0",
+      "listhen": "1.8.0",
+      "lodash": "4.17.21"
+    },
     "devDependencies": {
+      "@types/lodash": "4.17.9"
     }
   }
