--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
     "@eslint/js": "9.11.1",
+    "@rollup/plugin-typescript": "12.1.0",
+    "@types/node": "20",
     "eslint": "9.11.1",
     "globals": "15.9.0",
     "husky": "9.1.6",
+    "tslib": "2.7.0",
     "turbo": "2.1.2",
     "typescript": "5.6.2",
     "typescript-eslint": "8.7.0",
@@ -30,7 +33,7 @@
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
-        "unbuild"
+        "picomatch"
       ]
     }
   }
