--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
       "persistent": true
     },
     "test": {
-      "dependsOn": ["^build, ^test"]
+      "dependsOn": ["^test"]
     }
   }
 }
