feat(dev-server): add dev-server command

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,10 +20,17 @@
     "files": [
       "dist"
     ],
+    "bin": {
+      "cube": "./dist/index.cjs"
+    },
     "scripts": {
       "build": "unbuild",
       "dev": "unbuild --watch",
       "prepack": "pnpm build"
+    },
+    "dependencies": {
+      "@cube/devkit": "workspace:*",
+      "citty": "0.1.6"
     },
     "devDependencies": {
     }
