--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "experimentalDecorators": true
+    "baseUrl": ",",
+    "lib": ["es2022", "DOM"],
   },
+  "include": ["./src/**/*.ts"]
 }
