--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
     "build": "turbo build --filter=!playground",
     "dev": "turbo dev --filter=!playground",
     "test": "turbo test --filter=!playground",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "oxlint -c oxlintrc.json"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
-    "@eslint/js": "9.11.1",
     "@rollup/plugin-typescript": "12.1.0",
     "@types/node": "20",
-    "eslint": "9.11.1",
     "globals": "15.9.0",
     "husky": "9.1.6",
+    "oxlint": "^0.9.9",
     "tslib": "2.7.0",
     "turbo": "2.1.2",
     "typescript": "5.6.2",
-    "typescript-eslint": "8.7.0",
     "unbuild": "3.0.0-rc.8"
   },
   "pnpm": {
