--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tslib": "2.7.0",
     "turbo": "2.1.2",
     "typescript": "5.6.2",
+    "typescript-eslint": "8.7.0",
     "unbuild": "3.0.0-rc.8"
   },
   "pnpm": {
