feat(core): change linter to oxc

--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "turbo": "turbo",
     "build": "turbo build --filter=!playground",
     "dev": "turbo dev --filter=!playground",
-    "test": "turbo test --filter=!playground",
-    "prepare": "husky",
-    "lint": "oxlint -c oxlintrc.json"
+    "test": "turbo test --filter=!playground && oxlint -c oxlintrc.json",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
