--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "turbo build --filter=!playground",
     "dev": "turbo dev --filter=!playground",
     "test": "turbo test --filter=!playground",
-    "lint": "oxlint -c oxlintrc.json",
+    "lint": "oxlint -c oxlintrc.json --fix",
     "prepare": "husky"
   },
   "devDependencies": {
