--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ out/
 build
 dist
 
-
 # Debug
 npm-debug.log*
 yarn-debug.log*
@@ -41,3 +40,7 @@ packages/**/dist
 
 # JetBrains IDEs
 .idea
+
+# Vitepress
+docs/.vitepress/cache
+docs/.vitepress/dist
