--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "dev": "turbo dev --filter=!playground",
     "test": "turbo test --filter=!playground",
     "lint": "oxlint --config=oxlintrc.json --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "docs:dev": "vitepress dev doc",
+    "docs:build": "vitepress build doc",
+    "docs:preview": "vitepress preview doc"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
@@ -28,7 +31,8 @@
     "turbo": "2.1.2",
     "typescript": "5.6.2",
     "typescript-eslint": "8.7.0",
-    "unbuild": "3.0.0-rc.8"
+    "unbuild": "3.0.0-rc.8",
+    "vitepress": "1.3.4"
   },
   "pnpm": {
     "peerDependencyRules": {
