--- a/packages/plugins/redis/package.json
+++ b/packages/plugins/redis/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cube/redis",
   "version": "0.0.0",
-  "description": "Redis package for Cube framework",
+  "description": "Redis plugin for Cube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@cube/redis",
   "license": "MIT",
