--- a/packages/plugins/redis/package.json
+++ b/packages/plugins/redis/package.json
@@ -26,7 +26,9 @@
     "prepack": "pnpm build"
   },
   "dependencies": {
+    "@cube/core": "workspace:*",
     "ioredis": "5.3.2"
+
   },
   "devDependencies": {
   }
