--- a/packages/plugins/redis/package.json
+++ b/packages/plugins/redis/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@cube/redis",
+  "name": "@cube/plugin-redis",
   "version": "0.0.0",
   "description": "Redis plugin for Cube framework",
   "packageManager": "pnpm@9.10.0",
-  "repository": "@cube/redis",
+  "repository": "@cube/plugin-redis",
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
