--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "@cube/core",
+    "name": "@vercube/core",
     "version": "0.0.0",
-    "description": "Core module for Cube framework",
+    "description": "Core module for Vercube framework",
     "packageManager": "pnpm@9.10.0",
-    "repository": "@cube/core",
+    "repository": "@vercube/core",
     "license": "MIT",
     "sideEffects": false,
     "type": "module",
@@ -26,7 +26,7 @@
       "prepack": "pnpm build"
     },
     "dependencies": {
-      "@cube/di": "workspace:*",
+      "@vercube/di": "workspace:*",
       "h3": "1.12.0",
       "listhen": "1.8.0",
       "lodash": "4.17.21"
