--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,9 +24,7 @@
       "vercube": "./dist/index.cjs"
     },
     "scripts": {
-      "build": "unbuild",
-      "dev": "unbuild --watch",
-      "prepack": "pnpm build"
+      "build": "unbuild"
     },
     "dependencies": {
       "@vercube/devkit": "workspace:*",
