--- a/package.json
+++ b/package.json
@@ -11,17 +11,12 @@
   "scripts": {
     "build": "nx run-many -t build",
     "dev": "nx watch --all -- nx run \\$NX_PROJECT_NAME:build",
-    "lint": "eslint --cache --fix . && prettier -w .",
+    "lint": "eslint --cache --fix .",
     "postinstall": "simple-git-hooks"
   },
   "lint-staged": {
-    "*.{js,mjs,json,cjs}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "eslint --fix",
-      "prettier --parser=typescript --write"
+    "*.{js,ts}": [
+      "eslint --fix"
     ]
   },
   "devDependencies": {
@@ -36,7 +31,6 @@
     "eslint-config-unjs": "0.4.2",
     "globals": "15.14.0",
     "nx": "20.3.2",
-    "prettier": "^3.4.2",
     "simple-git-hooks": "2.11.1",
     "tslib": "2.8.1",
     "typescript": "5.7.3",
