--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "nx run-many -t build",
     "dev": "nx watch --all -- nx run \\$NX_PROJECT_NAME:build",
     "lint": "eslint --cache --fix .",
+    "pre-commit": "lint-staged",
     "postinstall": "simple-git-hooks"
   },
   "lint-staged": {
@@ -30,6 +31,7 @@
     "eslint": "9.18.0",
     "eslint-config-unjs": "0.4.2",
     "globals": "15.14.0",
+    "lint-staged": "15.4.2",
     "nx": "20.3.2",
     "simple-git-hooks": "2.11.1",
     "tslib": "2.8.1",
@@ -38,7 +40,7 @@
     "unbuild": "3.3.1"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged",
+    "pre-commit": "pnpm pre-commit",
     "commit-msg": "pnpm dlx commitlint --edit $1"
   },
   "pnpm": {
