--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
   "editor.tabSize": 2,
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "search.exclude": {
-    "**/node_modules": true
+    "**/node_modules": true,
+    "**/dist": true
   },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
