--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
     "build": "unbuild"
   },
   "dependencies": {
+    "@standard-schema/spec": "1.0.0",
     "@vercube/di": "workspace:*",
     "h3": "1.14.0",
     "listhen": "1.9.0",
