--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@standard-schema/spec": "1.0.0",
     "@vercube/di": "workspace:*",
+    "@vercube/logger": "workspace:*",
     "h3": "1.14.0",
     "listhen": "1.9.0",
     "lodash": "4.17.21"
