--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -13,10 +13,10 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     },
-    "./appenders": {
-      "types": "./dist/Appenders/index.d.mts",
-      "import": "./dist/Appenders/index.mjs",
-      "require": "./dist/Appenders/index.cjs"
+    "./providers": {
+      "types": "./dist/Providers/index.d.mts",
+      "import": "./dist/Providers/index.mjs",
+      "require": "./dist/Providers/index.cjs"
     }
   },
   "main": "./dist/index.cjs",
