--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,29 +19,18 @@
     "noEmit": false,
     "importHelpers": true,
     "skipLibCheck": true,
-    "lib": [
-      "dom",
-      "es6",
-      "es2017",
-      "es2019",
-      "ESNext"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "lib": ["dom", "es6", "es2017", "es2019", "ESNext"],
+    "typeRoots": ["node_modules/@types"],
     "paths": {
       "@vercube/*": [
         "packages/*/src"
       ],
       "@vercube/logger/providers/*": [
         "packages/logger/src/Providers/*"
-      ]
+      ],
+      "nx": ["packages/nx/src/index.ts"]
     }
   },
-  "include": [
-    "packages/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["packages/**/*.ts"],
+  "exclude": ["node_modules"]
 }
