--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -9,12 +9,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.mts",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     },
     "./providers": {
-      "types": "./dist/Providers/index.d.mts",
+      "types": "./dist/Providers/index.d.ts",
       "import": "./dist/Providers/index.mjs",
       "require": "./dist/Providers/index.cjs"
     }
