--- a/playground/package.json
+++ b/playground/package.json
@@ -6,6 +6,7 @@
   "description": "Playground for Vercube framework",
   "packageManager": "pnpm@9.15.0",
   "scripts": {
+    "build": "vercube build",
     "dev": "vercube dev"
   },
   "devDependencies": {
