--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lint": "eslint --cache --fix .",
     "test": "nx run-many -t test",
     "pre-commit": "lint-staged",
-    "postinstall": "simple-git-hooks"
+    "postinstall": "simple-git-hooks",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -36,11 +39,13 @@
     "nx": "20.4.6",
     "oxc-transform": "0.53.0",
     "rolldown": "1.0.0-beta.3-commit.ca90fa2",
+    "sass-embedded": "^1.85.1",
     "simple-git-hooks": "2.11.1",
     "tslib": "2.8.1",
     "typescript": "5.7.3",
     "typescript-eslint": "8.25.0",
-    "unplugin-isolated-decl": "0.11.2"
+    "unplugin-isolated-decl": "0.11.2",
+    "vitepress": "^1.6.3"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm pre-commit",
