feat(config): add base zero-config implementation

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,8 @@
     "@standard-schema/spec": "1.0.0",
     "@vercube/di": "workspace:*",
     "@vercube/logger": "workspace:*",
+    "c12": "^3.0.2",
+    "defu": "^6.1.4",
     "h3": "1.15.1",
     "listhen": "1.9.0",
     "lodash": "4.17.21"
