--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@nx/js": "20.4.6",
     "@nx/plugin": "20.4.6",
     "@oxc-project/runtime": "0.53.0",
+    "@swc-node/register": "^1.10.9",
+    "@swc/core": "^1.11.5",
+    "@swc/helpers": "^0.5.15",
     "@types/lodash": "4.17.15",
     "@types/node": "22.13.5",
     "eslint": "9.21.0",
