--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=22"
   },
   "scripts": {
-    "build": "nx run-many -t build",
+    "build": "nx run-many -t build --exclude=playground",
     "dev": "nx watch --all -- nx run \\$NX_PROJECT_NAME:build",
     "lint": "eslint --cache --fix .",
     "test": "nx run-many -t test",
