--- a/nx.json
+++ b/nx.json
@@ -26,7 +26,7 @@
       "dependsOn": [
         "^build"
       ],
-      "cache": true
+      "cache": false
     },
     "test": {
       "dependsOn": [
