--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,8 +28,8 @@
     "@standard-schema/spec": "1.0.0",
     "@vercube/di": "workspace:*",
     "@vercube/logger": "workspace:*",
-    "c12": "^3.0.2",
-    "defu": "^6.1.4",
+    "c12": "3.0.2",
+    "defu": "6.1.4",
     "h3": "1.15.1",
     "listhen": "1.9.0"
   }
