--- a/packages/devkit/package.json
+++ b/packages/devkit/package.json
@@ -21,13 +21,13 @@
     "dist"
   ],
   "dependencies": {
-    "@oxc-project/runtime": "0.53.0",
+    "@oxc-project/runtime": "0.56.0",
     "@vercube/core": "workspace:*",
     "dotenv": "16.4.7",
     "consola": "3.4.0",
     "hookable": "5.5.3",
-    "oxc-parser": "^0.53.0",
-    "oxc-transform": "0.53.0",
+    "oxc-parser": "0.56.0",
+    "oxc-transform": "0.56.0",
     "pathe": "2.0.3",
     "rolldown": "1.0.0-beta.3-commit.ca90fa2"
   }
