--- a/packages/nx/package.json
+++ b/packages/nx/package.json
@@ -7,7 +7,7 @@
   "types": "./src/index.d.ts",
   "dependencies": {
     "@nx/devkit": "20.4.6",
-    "tslib": "^2.3.0"
+    "tslib": "2.8.1"
   },
   "devDependencies": {
   },
