feat(release): add releaser

--- a/nx.json
+++ b/nx.json
@@ -2,11 +2,18 @@
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "release": {
     "projects": [
-      "*"
+      "*",
+      "!playground",
+      "!@vercube/nx"
     ],
+    "git": {
+      "commitMessage": "chore: release v{version} [no ci]"
+    },
     "releaseTagPattern": "v{version}",
     "version": {
+      "preVersionCommand": "pnpm build",
       "generatorOptions": {
+        "preserveLocalDependencyProtocols": true,
         "skipLockFileUpdate": true,
         "fallbackCurrentVersionResolver": "git-tag",
         "currentVersionResolver": "registry"
@@ -15,9 +22,8 @@
     "changelog": {
       "automaticFromRef": true,
       "workspaceChangelog": {
-        "renderOptions": {
-          "authors": false
-        }
+        "file": false,
+        "createRelease": "github"
       }
     }
   },
