fix(release): fix release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,8 @@ jobs:
       - name: Setup environment
         run: |
           pnpm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
+          git config --global user.email "release@vercube.dev"
+          git config --global user.name "Vercube-CI"
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
