--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@vercube/core",
-  "version": "0.0.1-alpha.6",
+  "version": "0.0.1-alpha.7",
+  "private": false,
   "description": "Core module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/core",
