--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@vercube/storage",
-  "version": "0.0.1-alpha.6",
+  "version": "0.0.1-alpha.7",
+  "private": false,
   "description": "Storage module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/storage",
