fix(release): fix release.yml

--- a/nx.json
+++ b/nx.json
@@ -24,7 +24,10 @@
       "automaticFromRef": true,
       "workspaceChangelog": {
         "file": false,
-        "createRelease": "github"
+        "createRelease": "github",
+        "renderOptions": {
+          "authors": false
+        }
       }
     }
   },
