--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@vercube/core",
   "version": "0.0.1-alpha.9",
-  "private": false,
   "description": "Core module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/core",
@@ -33,5 +32,8 @@
     "defu": "6.1.4",
     "h3": "1.15.1",
     "listhen": "1.9.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
