--- a/packages/devkit/package.json
+++ b/packages/devkit/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@vercube/devkit",
   "version": "0.0.1-alpha.9",
-  "private": false,
   "description": "Devkit  module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/devkit",
@@ -31,5 +30,8 @@
     "oxc-transform": "0.56.0",
     "pathe": "2.0.3",
     "rolldown": "1.0.0-beta.3-commit.ca90fa2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
