--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@vercube/logger",
   "version": "0.0.1-alpha.9",
-  "private": false,
   "description": "Logger module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/logger",
@@ -29,5 +28,8 @@
   "dependencies": {
     "@vercube/di": "workspace:*"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "publishConfig": {
+    "access": "public"
+  }
 }
