--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,8 @@
     "c12": "3.0.2",
     "defu": "6.1.4",
     "h3": "1.15.1",
-    "listhen": "1.9.0"
+    "listhen": "1.9.0",
+    "pathe": "2.0.3"
   },
   "publishConfig": {
     "access": "public"
