--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "search.exclude": {
     "**/node_modules": true,
-    "**/dist": true
+    "**/dist": true,
+    "packages/**/dist": true
   },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
