--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "nx watch --all -- nx run \\$NX_PROJECT_NAME:build",
     "lint": "eslint --cache --fix .",
     "test": "nx run-many -t test",
+    "test:tscheck": "tsc --noEmit",
     "pre-commit": "lint-staged",
     "postinstall": "simple-git-hooks && nx build @vercube/nx",
     "docs:dev": "vitepress dev docs",
