--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -4,8 +4,9 @@
   "description": "Create a Vercube app in seconds",
   "license": "MIT",
   "repository": "@vercube/create-app",
+  "main": "bin/create-vercube.js",
   "bin": {
-    "create-vercube": "bin/create-vercube.mjs"
+    "create-vercube": "bin/create-vercube.js"
   },
   "files": [
     "bin"
