--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "nx run-many -t build --exclude=playground",
     "dev": "nx watch --all -- nx run \\$NX_PROJECT_NAME:build",
     "lint": "eslint --cache --fix .",
-    "test": "nx run-many -t test",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "test:tscheck": "tsc --noEmit",
     "pre-commit": "lint-staged",
     "postinstall": "simple-git-hooks && nx build @vercube/nx",
@@ -35,6 +37,8 @@
     "@swc/core": "^1.11.16",
     "@swc/helpers": "^0.5.15",
     "@types/node": "22.14.0",
+    "@vitest/coverage-v8": "3.1.1",
+    "@vitest/ui": "3.1.1",
     "eslint": "9.23.0",
     "eslint-config-unjs": "0.4.2",
     "globals": "16.0.0",
@@ -50,7 +54,8 @@
     "typescript-eslint": "8.29.0",
     "unplugin-isolated-decl": "0.13.6",
     "vitepress": "1.6.3",
-    "vitepress-plugin-mermaid": "2.0.17"
+    "vitepress-plugin-mermaid": "2.0.17",
+    "vitest": "3.1.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm pre-commit",
