--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -25,10 +25,19 @@
   "files": [
     "dist"
   ],
+  "scripts": {
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
+  },
   "dependencies": {
     "@vercube/di": "workspace:*"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "vitest": "^1.3.1",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1"
+  },
   "publishConfig": {
     "access": "public"
   }
