--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,11 @@
   "files": [
     "dist"
   ],
+  "scripts": {
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage"
+  },
   "dependencies": {
     "@standard-schema/spec": "1.0.0",
     "@vercube/di": "workspace:*",
@@ -29,6 +34,10 @@
     "pathe": "2.0.3",
     "rou3": "0.5.1",
     "srvx": "0.2.7"
+  },
+  "devDependencies": {
+    "vitest": "^1.3.1",
+    "@vitest/coverage-v8": "^1.3.1"
   },
   "publishConfig": {
     "access": "public"
