--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,11 +33,11 @@
     "defu": "6.1.4",
     "pathe": "2.0.3",
     "rou3": "0.5.1",
-    "srvx": "0.2.7"
+    "srvx": "0.2.8"
   },
   "devDependencies": {
-    "vitest": "^1.3.1",
-    "@vitest/coverage-v8": "^1.3.1"
+    "@vitest/coverage-v8": "^1.3.1",
+    "vitest": "^1.3.1"
   },
   "publishConfig": {
     "access": "public"
