--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-vercube",
-  "version": "0.0.1-alpha.19",
+  "version": "0.0.1-beta.0",
   "description": "Create a Vercube app in seconds",
   "license": "MIT",
   "repository": "@vercube/create-app",
