--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vercube/logger",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1-beta.5",
   "description": "Logger module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/logger",
@@ -23,7 +23,8 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "dependencies": {
     "@vercube/di": "workspace:*"
