chore: release v0.0.1 [no ci]

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vercube/cli",
-  "version": "0.0.1-beta.7",
+  "version": "0.0.1",
   "description": "CLI module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/cli",
