--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vercube/core",
-  "version": "0.0.1-beta.7",
+  "version": "0.0.1",
   "description": "Core module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/core",
