--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vercube/storage",
-  "version": "0.0.1-beta.7",
+  "version": "0.0.1",
   "description": "Storage module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": "@vercube/storage",
