--- a/packages/h3/package.json
+++ b/packages/h3/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.2-beta.1",
   "description": "H3  module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
-  "repository": "@vercube/h3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vercube/vercube.git",
+    "directory": "packages/h3"
+  },
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
