--- a/packages/h3/package.json
+++ b/packages/h3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vercube/h3",
-  "version": "0.0.2-beta.1",
+  "version": "0.0.2",
   "description": "H3  module for Vercube framework",
   "packageManager": "pnpm@9.10.0",
   "repository": {
