--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "playground": "cd playground && pnpm dev"
+    "playground": "cd playground && pnpm dev",
+    "bench": "node .bench/_run.mjs"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -45,6 +46,7 @@
     "globals": "16.0.0",
     "lint-staged": "15.5.1",
     "mermaid": "11.6.0",
+    "mitata": "1.0.34",
     "nx": "20.8.1",
     "oxc-transform": "0.67.0",
     "rolldown": "1.0.0-beta.8",
