--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:ui": "vitest --ui",
     "test:tscheck": "tsc --noEmit",
     "pre-commit": "lint-staged",
-    "postinstall": "simple-git-hooks && nx build @vercube/nx",
+    "postinstall": "simple-git-hooks",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
@@ -32,12 +32,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.8.0",
     "@commitlint/config-conventional": "19.8.0",
-    "@nx/js": "20.8.1",
-    "@nx/plugin": "20.8.1",
     "@oxc-project/runtime": "0.67.0",
-    "@swc-node/register": "^1.10.10",
-    "@swc/core": "^1.11.24",
-    "@swc/helpers": "^0.5.17",
     "@types/node": "22.15.3",
     "@vitest/coverage-v8": "3.1.2",
     "@vitest/ui": "3.1.2",
@@ -45,17 +40,14 @@
     "eslint-config-unjs": "0.4.2",
     "globals": "16.0.0",
     "lint-staged": "15.5.1",
-    "mermaid": "11.6.0",
     "mitata": "1.0.34",
     "nx": "20.8.1",
-    "oxc-transform": "0.67.0",
-    "rolldown": "1.0.0-beta.8",
+    "obuild": "../obuild",
     "sass-embedded": "^1.87.0",
     "simple-git-hooks": "2.13.0",
     "tslib": "2.8.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
-    "unplugin-isolated-decl": "0.13.10",
     "vitepress": "1.6.3",
     "vitepress-plugin-mermaid": "2.0.17",
     "vitest": "3.1.2"
