--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,24 +8,13 @@
   "sideEffects": false,
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
+    ".": "./dist/index.mjs"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/index.d.mts",
   "files": [
     "dist",
     "README.md"
   ],
-  "scripts": {
-    "test": "vitest",
-    "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage"
-  },
   "dependencies": {
     "@standard-schema/spec": "1.0.0",
     "@vercube/di": "workspace:*",
@@ -35,10 +24,6 @@
     "pathe": "2.0.3",
     "rou3": "0.6.1",
     "srvx": "0.6.0"
-  },
-  "devDependencies": {
-    "@vitest/coverage-v8": "^3.1.2",
-    "vitest": "^3.1.2"
   },
   "publishConfig": {
     "access": "public"
