--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -10,17 +10,13 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.mjs"
     },
     "./providers": {
-      "types": "./dist/Providers/index.d.ts",
-      "import": "./dist/Providers/index.mjs",
-      "require": "./dist/Providers/index.cjs"
+      "types": "./dist/providers/index.d.ts",
+      "import": "./dist/providers/index.mjs"
     }
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
